final fixes on mobile view, maybe?

--- a/styles.css
+++ b/styles.css
@@ -443,3 +443,17 @@ ul {
       margin-bottom: 10px;
     }
   }
+
+
+  @media (max-width: 768px) {
+    .project-body {
+      margin-left: 0;
+    }
+    .background-video {
+      margin-left: 0;
+      width: 100%;
+    }
+    ul {
+      padding-left: 10px;
+    }
+  }
